feat(SignIn ): change language without Input yet

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -1,3 +1,8 @@
 {
-  "greeting": "Hello World!"
+	"greeting": "Hello World!",
+	"signUp": "Sign Up",
+	"signIn": "Sign In",
+	"forgotPassword": "Forgot Password",
+	"haveAnAccount": "Do you have an account",
+	"dontHaveAnAccount": "Don’t have an account"
 }
