fif(public - locales - en)

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -4,7 +4,7 @@
 	"signIn": "Sign In",
 	"username": "Username",
 	"email": "Email",
-	"password": "Email",
+	"password": "Password",
 	"passwordConfirmation": "Password confirmation",
 	"forgotPassword": "Forgot Password",
 	"haveAnAccount": "Do you have an account",
