feat(SignUpModalWindow change language): 1. add data to JSON change language 2. use t from useClientTranslation to change language

--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -1,3 +1,7 @@
 {
-  "greeting": "Привет Мир!"
+	"greeting": "Привет Мир!",
+	"SignUpModal": {
+		"title": "Письмо отправлено",
+		"text": "Мы отправили ссылку для подтверждения электронной почты на"
+	}
 }
