--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -1,3 +1,7 @@
 {
-  "greeting": "Hello World!"
+	"greeting": "Hello World!",
+	"SignUpModal": {
+		"title": "Email sent",
+		"text": "We have sent a link to confirm your email to"
+	}
 }
