fix(SignUpModalWindow): change directory add type and props to SignUpModalPage add change language json`s

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -1,7 +1,3 @@
 {
-	"greeting": "Hello World!",
-	"SignUpModal": {
-		"title": "Email sent",
-		"text": "We have sent a link to confirm your email to"
-	}
+	"greeting": "Hello World!"
 }
