--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -1,7 +1,3 @@
 {
-	"greeting": "Привет Мир!",
-	"SignUpModal": {
-		"title": "Письмо отправлено",
-		"text": "Мы отправили ссылку для подтверждения электронной почты на"
-	}
+	"greeting": "Привет Мир!"
 }
