--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -1,12 +1,11 @@
 {
 	"greeting": "Hello World!",
-	"signUp": "Sign Up",
-	"signIn": "Sign In",
-	"username": "Username",
-	"email": "Email",
-	"password": "Password",
-	"passwordConfirmation": "Password confirmation",
-	"forgotPassword": "Forgot Password",
-	"haveAnAccount": "Do you have an account",
-	"dontHaveAnAccount": "Don’t have an account"
+  "signIn": {
+    "signIn": "Sign In",
+    "email": "Email",
+    "password": "Password",
+    "forgotPassword": "Forgot Password",
+    "dontHaveAnAccount": "Don’t have an account",
+    "signUp": "Sign Up"
+  }
 }
