--- a/client/public/locales/ru/translation.json
+++ b/client/public/locales/ru/translation.json
@@ -1,12 +1,11 @@
 {
 	"greeting": "Привет Мир!",
-	"signUp": "Зарегистрироваться",
-	"signIn": "Войти",
-	"username": "Имя пользователя",
-	"email": "Электронная почта",
-	"password": "Пароль",
-	"passwordConfirmation": "Подтверждение пароля",
-	"forgotPassword": "Забыли пароль",
-	"haveAnAccount": "Уже есть аккаунт",
-	"dontHaveAnAccount": "Еще не зарегистрированы"
+  "signIn": {
+    "signIn": "Войти",
+    "email": "Электронная почта",
+    "password": "Пароль",
+    "forgotPassword": "Забыли пароль",
+    "dontHaveAnAccount": "Еще не зарегистрированы",
+    "signUp": "Зарегистрироваться"
+  }
 }
