--- a/client/public/locales/ru/resetPage.json
+++ b/client/public/locales/ru/resetPage.json
@@ -3,10 +3,13 @@
   "info": "Введите адрес электронной почты, и мы вышлем вам дальнейшие инструкции",
   "sendLink": "Отправить ссылку",
   "BackToSignIn": "Страница Входа",
+  "sentByEmail": "Ссылка отправлена по электронной почте. Если вы не получили ссылку, запросите повторную отправку письма",
 
   "mainTitleReset": "Создайте новый пароль",
   "infoReset": "Ваш пароль должен содержать от 6 до 20 символов",
   "CreateNewPasswordReset": "Создать новый пароль",
   "inputTitleNewPassword": "Новый пароль",
-  "inputTitleConfirmPassword": "Повторение пароля"
+  "inputTitleConfirmPassword": "Повторение пароля",
+
+  "errorEmail": "Некорректный email"
 }
