feat & refactor ( EmailConfirmationModal ) : 1. перенес логику из ModalWindow в EmailConfirmationModal 2. Исправил типы в EmailConfirmationModalPropsType для EmailConfirmationModal 3. Добавил переводы 4. Убрал лишний код и обязательные типы

--- a/client/public/locales/en/signUpModal.json
+++ b/client/public/locales/en/signUpModal.json
@@ -1,6 +1,10 @@
 {
-	"SignUpModal": {
-		"title": "Email sent",
-		"text": "We have sent a link to confirm your email to"
-	}
+    "SignUpModal": {
+        "title": "Email sent",
+        "text": "We have sent a link to confirm your email to"
+    },
+    "EmailConfirmationModal": {
+        "title": "Email is confirmed",
+        "text": "Go to the Login page"
+    }
 }
