--- a/client/public/locales/ru/signUpModal.json
+++ b/client/public/locales/ru/signUpModal.json
@@ -1,6 +1,10 @@
 {
-	"SignUpModal": {
-		"title": "Письмо отправлено",
-		"text": "Мы отправили ссылку для подтверждения электронной почты на"
-	}
+    "SignUpModal": {
+        "title": "Письмо отправлено",
+        "text": "Мы отправили ссылку для подтверждения электронной почты на"
+    },
+    "EmailConfirmationModal": {
+        "title": "Ваша почта уже подтверждена",
+        "text": "Перейдите на страницу входа"
+    }
 }
