refactor( language change) 1/ all files and functions in lowercase 2/ all components have consts for language switching

--- a/client/public/locales/ru/signUpModal.json
+++ b/client/public/locales/ru/signUpModal.json
@@ -1,9 +1,9 @@
 {
-    "SignUpModal": {
+    "signUpModal": {
         "title": "Письмо отправлено",
         "text": "Мы отправили ссылку для подтверждения электронной почты на"
     },
-    "EmailConfirmationModal": {
+    "emailConfirmationModal": {
         "title": "Ваша почта уже подтверждена",
         "text": "Перейдите на страницу входа"
     }
