--- a/client/public/locales/en/signUpModal.json
+++ b/client/public/locales/en/signUpModal.json
@@ -1,9 +1,9 @@
 {
-    "SignUpModal": {
+    "signUpModal": {
         "title": "Email sent",
         "text": "We have sent a link to confirm your email to"
     },
-    "EmailConfirmationModal": {
+    "emailConfirmationModal": {
         "title": "Email is confirmed",
         "text": "Go to the Login page"
     }
