feat ( ErrorModal ): create, add language change

--- a/client/public/locales/en/signUpModal.json
+++ b/client/public/locales/en/signUpModal.json
@@ -6,5 +6,9 @@
     "emailConfirmationModal": {
         "title": "Email is confirmed",
         "text": "Go to the Login page"
+    },
+    "error": {
+        "title": "Email error",
+        "text": "Email is incorrect"
     }
 }
