--- a/client/public/locales/ru/signUpModal.json
+++ b/client/public/locales/ru/signUpModal.json
@@ -6,5 +6,9 @@
     "emailConfirmationModal": {
         "title": "Ваша почта уже подтверждена",
         "text": "Перейдите на страницу входа"
+    },
+    "error": {
+        "title": "Ошибка электронной почты",
+        "text": "Электронная почта неверна"
     }
 }
