fix after merge

--- a/client/public/locales/ru/SignUpAdditionPages.json
+++ b/client/public/locales/ru/SignUpAdditionPages.json
@@ -1,23 +1,23 @@
 {
-	"merge": {
-		"title": "Объединение учетных записей",
-		"text": {
-			"textFirstPart": "Пользователь с электронной почтойl",
-			"textSecondPart": "уже есть в системе. Можем ли мы объединить эти аккаунты?"
-		},
-		"buttonText": {
-			"yesMerge": "Да, объединить",
-			"no": "Нет"
-		}
-	},
-	"congratulation": {
-		"title": "Поздравляем!",
-		"text": "Ваша электронная почта подтверждена",
-		"buttonText": "Войти"
-	},
-	"verification": {
-		"title": "Срок действия ссылки для подтверждения электронной почты истек",
-		"text": "Похоже, срок действия ссылки для подтверждения истек. Не волнуйтесь, мы можем отправить ссылку еще раз",
-		"buttonText": "Повторно отправить ссылку для подтверждения"
-	}
+    "merge": {
+        "title": "Объединение учетных записей",
+        "text": {
+            "textFirstPart": "Пользователь с электронной почтойl",
+            "textSecondPart": "уже есть в системе. Можем ли мы объединить эти аккаунты?"
+        },
+        "buttonText": {
+            "yesMerge": "Да, объединить",
+            "no": "Нет"
+        }
+    },
+    "congratulation": {
+        "title": "Поздравляем!",
+        "text": "Ваша электронная почта подтверждена",
+        "buttonText": "Войти"
+    },
+    "resendLink": {
+        "title": "Срок действия ссылки для подтверждения электронной почты истек",
+        "text": "Похоже, срок действия ссылки для подтверждения истек. Не волнуйтесь, мы можем отправить ссылку еще раз",
+        "buttonText": "Повторно отправить ссылку для подтверждения"
+    }
 }
