fix & refactor & language switching 1 modal style column-gap 2 ModalWindow types without lng: string; 3 Types for ResendLinkModal, ErrorModal, EmailConfirmationModal 4 ErrorModal with userEmail and without it 5 ResendLink:  - if noEmail  - language switching was fix(mostly by it self/ Mybe after merge) 6 delete signUpApi 7 add transation

--- a/client/public/locales/en/signUpModal.json
+++ b/client/public/locales/en/signUpModal.json
@@ -1,14 +1,15 @@
 {
-    "signUpModal": {
-        "title": "Email sent",
-        "text": "We have sent a link to confirm your email to"
-    },
-    "emailConfirmationModal": {
-        "title": "Email is confirmed",
-        "text": "Go to the Login page"
-    },
-    "error": {
-        "title": "Email error",
-        "text": "Email is incorrect"
-    }
+  "signUpModal": {
+    "title": "Email sent",
+    "text": "We have sent a link to confirm your email to"
+  },
+  "emailConfirmationModal": {
+    "title": "Email is confirmed",
+    "text": "Go to the Login page"
+  },
+  "error": {
+    "title": "Email error",
+    "text": "Email is incorrect",
+    "emptyEmail": "Go back to email and try again"
+  }
 }
