--- a/client/public/locales/ru/signUpModal.json
+++ b/client/public/locales/ru/signUpModal.json
@@ -1,14 +1,15 @@
 {
-    "signUpModal": {
-        "title": "Письмо отправлено",
-        "text": "Мы отправили ссылку для подтверждения электронной почты на"
-    },
-    "emailConfirmationModal": {
-        "title": "Ваша почта уже подтверждена",
-        "text": "Перейдите на страницу входа"
-    },
-    "error": {
-        "title": "Ошибка электронной почты",
-        "text": "Электронная почта неверна"
-    }
+  "signUpModal": {
+    "title": "Письмо отправлено",
+    "text": "Мы отправили ссылку для подтверждения электронной почты на"
+  },
+  "emailConfirmationModal": {
+    "title": "Ваша почта уже подтверждена",
+    "text": "Перейдите на страницу входа"
+  },
+  "error": {
+    "title": "Ошибка электронной почты",
+    "text": "Электронная почта неверна",
+    "emptyEmail": "Вернитесь на почту и повторите поытку"
+  }
 }
