--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -1,13 +1,5 @@
 {
   "greeting": "Hello World!",
-  "signIn": {
-    "signIn": "Sign In",
-    "email": "Email",
-    "password": "Password",
-    "forgotPassword": "Forgot Password",
-    "dontHaveAnAccount": "Don’t have an account",
-    "signUp": "Sign Up"
-  },
   "signUp": {
     "signUp": "Sign Up",
     "userName": "Username",
@@ -27,7 +19,7 @@
     "passwordConfirmation": "Password Confirmation",
     "forgotPassword": "Forgot Password",
     "dontHaveAnAccount": "Don't have an account",
-    "signUp": "Sign Up"
+    "sigIn": "Sign In"
   },
   "input": {
     "title": "Title",
