--- a/client/public/locales/ru/signout.json
+++ b/client/public/locales/ru/signout.json
@@ -1,3 +1,6 @@
 {
-  "signout": "Выйти"
+  "signout": "Выйти",
+  "logout-text": "Вы действительно хотите выйти из своей учетной записи",
+  "yes": "Да",
+  "no": "Нет"
 }
