--- a/client/public/locales/ru/emailConfiramtion.json
+++ b/client/public/locales/ru/emailConfiramtion.json
@@ -18,6 +18,10 @@
       "title": "Ошибка электронной почты",
       "text": "Электронная почта неверна",
       "emptyEmail": "Вернитесь на почту и повторите поытку"
+    },
+    "signUpModal": {
+      "title": "Письмо отправлено",
+      "text": "Мы отправили ссылку для подтверждения электронной почты на"
     }
   }
 }
