feat: DropdownMobileMenu - instral radix-ui/react-dropdown-menu - add icons - language change - change directory - create DropdownMobileMenu - styles

--- a/client/public/locales/en/sidebar.json
+++ b/client/public/locales/en/sidebar.json
@@ -6,5 +6,6 @@
   "search": "Search",
   "statistics": "Statistics",
   "favorites": "Favorites",
-  "logOut": "Log Out"
+  "logOut": "Log Out",
+  "settings": "Profile Settings"
 }
