--- a/client/public/locales/ru/sidebar.json
+++ b/client/public/locales/ru/sidebar.json
@@ -6,5 +6,6 @@
   "search": "Поиск",
   "statistics": "Статистика",
   "favorites": "Избранное",
-  "logOut": "Выйти"
+  "logOut": "Выйти",
+  "settings": "Настройки профиля"
 }
