--- a/client/public/locales/ru/signUp.json
+++ b/client/public/locales/ru/signUp.json
@@ -17,5 +17,10 @@
   "passwordConfirmation": "Подтверждение пароля",
   "forgotPassword": "Забыли пароль",
   "doYouHaveAnAccount": "Уже есть аккаунт?",
-  "signIn": "Войти"
+  "signIn": "Войти",
+  "modal": {
+    "title": "Сообщение отправлено",
+    "text": "Мы отправили ссылку для подтверждения вашей почты на",
+    "ok": "ОК"
+  }
   }
