add Select custom component; refactor LangSwitcher feature

--- a/client/public/locales/en/date-picker.json
+++ b/client/public/locales/en/date-picker.json
@@ -14,5 +14,6 @@
     "dec": "December"
   },
   "placeholder": "mm.dd.yyyy",
-  "placeholder-range": "mm.dd.yyyy - mm.dd.yyyy"
+  "placeholder-range": "mm.dd.yyyy - mm.dd.yyyy",
+  "privacy-policy": "Privacy Policy"
 }
