--- a/client/public/locales/en/profile-settings.json
+++ b/client/public/locales/en/profile-settings.json
@@ -31,6 +31,7 @@
     "firstName": "First Name",
     "lastName": "Last Name",
     "birthday": "Date of birth",
+    "city": "City",
     "aboutMe": "About Me"
   }
 }
