--- a/client/public/locales/ru/profile-settings.json
+++ b/client/public/locales/ru/profile-settings.json
@@ -25,13 +25,17 @@
       "birthday": "Пользователь младше 13 лет не может создать профиль",
       "aboutMe": {
         "max": "Это поле должно содержать не более 200 символов"
-      }
+      },
+      "update": "Не удалось обновить информацию профиля. Попробуйте позже"
     },
     "userName": "Имя пользователя",
     "firstName": "Имя",
     "lastName": "Фамилия",
     "birthday": "Дата рождения",
     "city": "Город",
-    "aboutMe": "Обо мне"
+    "aboutMe": "Обо мне",
+    "privacy-policy": "Политика конфиденциальности",
+    "update-success": "Данные профиля успешно обновлены",
+    "button": "Сохранить изменения"
   }
 }
