--- a/client/public/locales/ru/signUp.json
+++ b/client/public/locales/ru/signUp.json
@@ -22,5 +22,12 @@
     "title": "Сообщение отправлено",
     "text": "Мы отправили ссылку для подтверждения вашей почты на",
     "ok": "ОК"
+  },
+  "agree": {
+    "iAgreeTo": "Я согласен с ",
+    "termsOfService": "условиями обслуживания",
+    "and": "и ",
+    "privacyPolicy": "политикой конфиденциальности",
+    "backToSignUp": "Вернуться к регистрации"
   }
-  }
+}
