migrate signout, signup, confirmationEmailViaCode, resendLink, signIn, signInWithGithub, me endpoints

--- a/client/public/locales/en/confirmationEmail.json
+++ b/client/public/locales/en/confirmationEmail.json
@@ -13,5 +13,6 @@
     "title": "Congratulations!",
     "text": "Your email has already been confirmed previously",
     "button-text": "Sign In"
-  }
+  },
+  "resend-success": "A new confirmation link has been successfully sent to your email"
 }
