--- a/client/public/locales/ru/confirmationEmail.json
+++ b/client/public/locales/ru/confirmationEmail.json
@@ -13,5 +13,6 @@
     "title": "Поздравляем!",
     "text": "Ваша электронная почта уже была подтверждена ранее",
     "button-text": "Войти"
-  }
+  },
+  "resend-success": "Новая ссылка для подтверждения успешно отправлена на вашу почту"
 }
