--- a/client/public/locales/ru/profile-settings.json
+++ b/client/public/locales/ru/profile-settings.json
@@ -22,7 +22,7 @@
         "min": "Это поле должно содержать не менее 1 символов",
         "max": "Это поле должно содержать не более 50 символов"
       },
-      "birthday": "Пользователь младше 13 лет не может создать профиль",
+      "dateOfBirth": "Пользователь младше 13 лет не может создать профиль",
       "aboutMe": {
         "max": "Это поле должно содержать не более 200 символов"
       },
@@ -31,7 +31,7 @@
     "userName": "Имя пользователя",
     "firstName": "Имя",
     "lastName": "Фамилия",
-    "birthday": "Дата рождения",
+    "dateOfBirth": "Дата рождения",
     "city": "Город",
     "aboutMe": "Обо мне",
     "privacy-policy": "Политика конфиденциальности",
