--- a/client/public/locales/en/date-picker.json
+++ b/client/public/locales/en/date-picker.json
@@ -13,7 +13,7 @@
     "nov": "November",
     "dec": "December"
   },
-  "placeholder": "mm.dd.yyyy",
-  "placeholder-range": "mm.dd.yyyy - mm.dd.yyyy",
+  "placeholder": "dd.mm.yyyy",
+  "placeholder-range": "dd.mm.yyyy - dd.mm.yyyy",
   "privacy-policy": "Privacy Policy"
 }
