--- a/client/public/locales/ru/profile-settings.json
+++ b/client/public/locales/ru/profile-settings.json
@@ -28,6 +28,22 @@
       },
       "update": "Не удалось обновить информацию профиля. Попробуйте позже"
     },
+    "upload-modal": {
+      "title": "Добавить аватар",
+      "btn": "Выбрать с компьютера",
+      "cropper-btn": "Сохранить",
+      "errors": {
+        "size": "Ошибка! Размер фотографии должен быть меньше 1,5 МБ!"
+      }
+    },
+    "delete-modal": {
+      "title": "Удалить фотографию",
+      "text": "Вы уверены, что хотите удалить фотографию?",
+      "btns": {
+        "yes": "Да",
+        "no": "Нет"
+      }
+    },
     "userName": "Имя пользователя",
     "firstName": "Имя",
     "lastName": "Фамилия",
@@ -36,6 +52,7 @@
     "aboutMe": "Обо мне",
     "privacy-policy": "Политика конфиденциальности",
     "update-success": "Данные профиля успешно обновлены",
-    "button": "Сохранить изменения"
+    "button": "Сохранить изменения",
+    "avatar-btn": "Добавить аватар"
   }
 }
