add: conditions for login, showing error login fix: messages for error fields

--- a/client/public/locales/ru/signIn.json
+++ b/client/public/locales/ru/signIn.json
@@ -6,11 +6,12 @@
   "forgotPassword": "Забыли пароль",
   "dontHaveAnAccount": "Еще не зарегистрированы",
   "errors": {
-    "emailRequired": "Электронная почта обязательна",
+    "emailRequired": "Email обязателен",
     "passwordRequired": "Пароль обязателен",
-    "emailInvalid": "Неверный формат электронной почты",
-    "passwordMinLength": "Минимальная длина пароля - 6 символов",
-    "passwordMaxLength": "Максимальная длина пароля - 20 символов"
+    "emailInvalid": "Электронная почта должна соответствовать формату example@example.com",
+    "passwordMinLength": "Минимальное количество символов 6",
+    "passwordMaxLength": "Максимальное количество символов 20",
+    "passwordMustContain": "Пароль должен содержать: a-z, A-Z, ! \", # $ % & ' ( ) * + , - . / : ; < = > ? @ [ \\ ] ^ _` { | } ~"
   },
-  "errorLogin": "Вы ввели неверный пароль или адрес электронной почты. Пожалуйста, попробуйте еще раз"
+  "errorLogin": "Адрес электронной почты или пароль неверны. Попробуйте еще раз, пожалуйста"
 }
