--- a/client/public/locales/en/signIn.json
+++ b/client/public/locales/en/signIn.json
@@ -8,9 +8,10 @@
   "errors": {
     "emailRequired": "Email is required",
     "passwordRequired": "Password is required",
-    "emailInvalid": "Invalid email format",
-    "passwordMinLength": "Password must have at least 6 characters",
-    "passwordMaxLength": "Password must be less than or equal to 20 characters"
+    "emailInvalid": "The email must match the format example@example.com",
+    "passwordMinLength": "Minimum number of characters 6",
+    "passwordMaxLength": "Maximum number of characters 20",
+    "passwordMustContain": "Password must contain: a-z, A-Z,  ! \", # $ % & ' ( ) * + , - . / : ; < = > ? @ [ \\ ] ^ _` { | } ~"
   },
-  "errorLogin": "The password or email you entered is incorrect. Please try again"
+  "errorLogin": "The email or password are incorrect. Try again please"
 }
