fix: code refactoring, delete extra props in Input.tsx add: goBack buttons for TermsOfServicePage.tsx and privacyPolicy.tsx

--- a/client/public/locales/ru/signUp.json
+++ b/client/public/locales/ru/signUp.json
@@ -27,9 +27,9 @@
   },
   "agree": {
     "iAgreeTo": "Я согласен с",
-    "termsOfService": "условиями",
+    "termsOfService": "Условия использования",
     "and": "и",
-    "privacyPolicy": "политикой конфиденциальности",
+    "privacyPolicy": "Политика конфиденциальности",
     "backToSignUp": "Вернуться к регистрации"
   }
 }
