--- a/client/public/locales/ru/create-post.json
+++ b/client/public/locales/ru/create-post.json
@@ -1,6 +1,11 @@
 {
   "next-btn": "Дальше",
   "publish-btn": "Опубликовать",
+  "toasts": {
+    "success": "Пост успешно создан!",
+    "draft": "Черновик был успешно сохранен!",
+    "sizeError": "Ошибка! Размер фотографии должен быть меньше 10 МБ!"
+  },
   "image-selecting": {
     "title": "Добавить Фотографию",
     "select-btn": "Выбрать с Устройства",
