--- a/client/public/locales/ru/signUp.json
+++ b/client/public/locales/ru/signUp.json
@@ -23,7 +23,13 @@
   "modal": {
     "title": "Сообщение отправлено",
     "text": "Мы отправили ссылку для подтверждения вашей почты на",
-    "ok": "ОК"
+    "ok": "ОК",
+    "error": {
+      "title": "Произошла ошибка",
+      "internet": "Не удалось отправить запрос на регистрацию аккаунта в системе, отсутствует интернет соединение",
+      "existedEmail": "Аккаунт с такой электронной почтой \"{{email}}\" уже существует",
+      "ok": "ОК"
+    }
   },
   "agree": {
     "iAgreeTo": "Я согласен с",
