--- a/client/public/locales/en/signIn.json
+++ b/client/public/locales/en/signIn.json
@@ -13,5 +13,12 @@
     "passwordMaxLength": "Maximum number of characters 20",
     "passwordMustContain": "Password must contain: a-z, A-Z,  ! \", # $ % & ' ( ) * + , - . / : ; < = > ? @ [ \\ ] ^ _` { | } ~"
   },
+  "modal": {
+    "error": {
+      "title": "Error has occured",
+      "internet": "Failed to send a request to register an account in the system, there is no Internet connection",
+      "ok": "OK"
+    }
+  },
   "errorLogin": "The email or password are incorrect. Try again please"
 }
