--- a/client/public/locales/ru/signIn.json
+++ b/client/public/locales/ru/signIn.json
@@ -13,5 +13,12 @@
     "passwordMaxLength": "Максимальное количество символов 20",
     "passwordMustContain": "Пароль должен содержать: a-z, A-Z, ! \", # $ % & ' ( ) * + , - . / : ; < = > ? @ [ \\ ] ^ _` { | } ~"
   },
+  "modal": {
+    "error": {
+      "title": "Произошла ошибка",
+      "internet": "Не удалось отправить запрос на регистрацию аккаунта в системе, отсутствует интернет соединение",
+      "ok": "ОК"
+    }
+  },
   "errorLogin": "Адрес электронной почты или пароль неверны. Попробуйте еще раз, пожалуйста"
 }
