--- a/client/public/locales/ru/signUp.json
+++ b/client/public/locales/ru/signUp.json
@@ -7,6 +7,7 @@
     "userNameRequired": "Имя пользователя обязательно",
     "userNameMinLength": "Минимальное количество символов 6",
     "userNameMaxLength": "Максимальное количество символов 30",
+    "userNameCanContain": "Username может содержать только следующие символы 0-9; A-Z; a-z; _ ; -",
     "emailInvalid": "Электронная почта должна соответствовать формату example@example.com.",
     "emailRequired": "Email обязателен",
     "passwordRequired": "Пароль обязателен",
@@ -14,7 +15,7 @@
     "passwordMaxLength": "Максимальное количество символов 20",
     "passwordConfirmationRequired": "Подтверждение пароля обязательно",
     "passwordsDoNotMatch": "Пароли должны совпадать",
-    "passwordMustContain": "Пароль должен содержать: a-z, A-Z, ! \", # $ % & ' ( ) * + , - . / : ; < = > ? @ [ \\ ] ^ _` { | } ~"
+    "passwordMustContain": "Пароль должен содержать: 0-9; a-z; A-Z; ! \" # $ % & ' ( ) * + , - . / : ; < = > ? @ [ \\ ] ^ _ ` { | } ~"
   },
   "passwordConfirmation": "Подтверждение пароля",
   "forgotPassword": "Забыли пароль",
