--- a/client/public/locales/ru/signIn.json
+++ b/client/public/locales/ru/signIn.json
@@ -11,7 +11,7 @@
     "emailInvalid": "Электронная почта должна соответствовать формату example@example.com",
     "passwordMinLength": "Минимальное количество символов 6",
     "passwordMaxLength": "Максимальное количество символов 20",
-    "passwordMustContain": "Пароль должен содержать: a-z, A-Z, ! \", # $ % & ' ( ) * + , - . / : ; < = > ? @ [ \\ ] ^ _` { | } ~"
+    "passwordMustContain": "Пароль должен содержать: 0-9; A-Z; a-z; ! \" # $ % & ' ( ) * + , - . / : ; < = > ? @ [ \\ ] ^ _`{ | } ~"
   },
   "modal": {
     "error": {
