--- a/client/public/locales/ru/signUp.json
+++ b/client/public/locales/ru/signUp.json
@@ -29,6 +29,7 @@
       "title": "Произошла ошибка",
       "internet": "Не удалось отправить запрос на регистрацию аккаунта в системе, отсутствует интернет соединение",
       "existedEmail": "Аккаунт с такой электронной почтой \"{{email}}\" уже существует",
+      "existedUsername": "Aккаунт с таким именем пользователя \"{{username}}\" уже существует",
       "ok": "ОК"
     }
   },
