--- a/client/public/locales/ru/profile-settings.json
+++ b/client/public/locales/ru/profile-settings.json
@@ -54,5 +54,31 @@
     "update-success": "Данные профиля успешно обновлены",
     "button": "Сохранить изменения",
     "avatar-btn": "Добавить аватар"
+  },
+  "account-managment": {
+    "loader": {
+      "create": "Пожалуйста, подождите. Идет перенаправление на страницу оплаты...",
+      "cancel": "Пожалуйста, подождите. Идет отмена автоматического продления подписки..."
+    },
+    "auto-renewal": "Автоматическое продление",
+    "current-subscription": {
+      "title": "Текущая Подписка:",
+      "payment-date": "Дата оплаты",
+      "payment-next": "Следующая оплата"
+    },
+    "select-account": {
+      "title": "Тип Аккаунта:",
+      "personal": "Личный",
+      "business": "Бизнес"
+    },
+    "select-plan": {
+      "title": "Изменить свою подписку:",
+      "DAY": "${{amount}} за 1 День",
+      "WEEKLY": "${{amount}} за 7 Дней",
+      "MONTHLY": "${{amount}} за месяц"
+    },
+    "payments": {
+      "text": "Или"
+    }
   }
 }
