add Pagination custom component

--- a/client/public/locales/en/translation.json
+++ b/client/public/locales/en/translation.json
@@ -2,5 +2,9 @@
   "input": {
     "title": "Title",
     "error": "Error occurred"
+  },
+  "pagination": {
+    "pages-amount-1": "Show",
+    "pages-amount-2": "on page"
   }
 }
