--- a/client/public/locales/ru/profile-settings.json
+++ b/client/public/locales/ru/profile-settings.json
@@ -80,5 +80,24 @@
     "payments": {
       "text": "Или"
     }
+  },
+  "payments": {
+    "titles": {
+      "payment-date": "Дата оплаты",
+      "subscription-end-date": "Дата окончания подписки",
+      "price": "Цена",
+      "subscription-type": "Тип подписки",
+      "payment-type": "Тип оплаты"
+    },
+    "subscription-types": {
+      "DAY": "1 день",
+      "WEEKLY": "7 дней",
+      "MONTHLY": "1 месяц"
+    },
+    "payment-types": {
+      "STRIPE": "Stripe",
+      "PAYPAL": "PayPal",
+      "CREDIT_CARD": "Credit card"
+    }
   }
 }
